fix ensime